add statistics signatures
